updated White Paper to reflect PSO instead of GA

--- a/PyFin White Paper/Pyfin White Paper.tex
+++ b/PyFin White Paper/Pyfin White Paper.tex
@@ -228,7 +228,7 @@ It allocates your RA contribution(s) before tax, and finds the optimal distribut
 
 %The first thing to expect is that you will be taking financial advice from a computer, which feels a bit weird. You could try to be fancy and call it a ``Robo-advisor'' or ``AI'' the way OUTvest and other financial services companies' marketing departments do, but that's just smoke and mirrors. It is not a physical robot, and it is not AI. But it is still a computer program. Of course a lot of human expertise, thought, and care went into building the program, but you may still be uncomfortable investing money, possibly in counter-intuitive ways, on the advice from a calculator. It feels weird to us too. The best advice we have is to check the answers. Try to come up with a better solution yourself by trying different plans. This will give you a feel for the numbers.
 
-Due to the nature of the Genetic Algorithm there might be some jitter on the long-term contributions. We suggest that you use your good judgement and smooth these over in your actual contributions if you think that it is just noise.
+Due to the nature of the metaheuristics used, there might be some jitter on the long-term contributions. We suggest that you use your good judgement and smooth these over in your actual contributions if you think that it is just noise.
 \begin{table}[bt]
 	\centering
 	\caption{Parameters needed for Portfolio Calculation. Note that default values can be changed by the user.}
@@ -313,7 +313,9 @@ Due to the nature of the Genetic Algorithm there might be some jitter on the lon
 
 The investment allocation problem is mathematically complex due to the tax rules. Without going into details, it is our strong suspicion that it is mathematically impossible to guarantee that any algorithm will find \textit{the} optimal investment allocation solution. This is mainly due to the complexity of the tax laws. We therefore employ what are called "metaheuristic" methods\sidenote{For more, see \href{https://en.wikipedia.org/wiki/Metaheuristic}{this} Wikipedia article}. Metaheuristic algorithms can't guarantee that the best solution will be found, but when tuned properly they find really good solutions, usually leapfrogging the places where other algorithms get stuck. A solution found using a metaheuristic maybe the best; the only way would be to find a better one. However, experience has shown that the solutions these methods find are reliably better than any a human could devise.
 
-There are many heuristic methods, most of which are inspired by natural processes (\href{https://en.wikipedia.org/wiki/Particle_swarm_optimization}{particle swarm}, \href{https://en.wikipedia.org/wiki/Simulated_annealing}{simulated annealing}, etc.) The one we use is called the \href{https://en.wikipedia.org/wiki/Genetic_algorithm}{genetic algorithm} (sometimes called an evolutionary search). It works like this. We start with 100 very good investment allocation plans (individuals), generated semi-randomly to form our initial population. We say semi-randomly, because we build these solutions according to common-sense plans humans would devise. The algorithm evaluates all the individuals according to our objective of maximising post-retirement income after tax. After evaluating the whole population of individuals, it keeps the best individuals (most profitable plans). Each individual has a "genetic code": the sequence describing the sizes of the contributions and withdrawals to each fund in each year. It mates the best individuals with each other by taking bits of the one's genetic code (investment plan) and bits of the other's genetic code (investment plan) to form a new hybrid plan. It evaluates these ``offspring'', and again keeps the best parents and offspring. Random individuals are also mutated semi-randomly (in a way that makes sense) to see if minor changes add any value. If they do, these mutations (slight plan tweaks) will persist and become part of the gene pool. By repeating this process for a few generations (20-100), the population gradually improves and produces exceptional individuals, which are kept in the hall of fame. At some stage the population plateaus, and no further improvements are made. At this point the algorithm has converged to a solution. The best individual in the hall of fame is then selected as the "winning solution".
+There are many heuristic methods, most of which are inspired by natural processes (\href{https://en.wikipedia.org/wiki/Genetic_algorithm}{genetic algorithm} (sometimes called an evolutionary search), \href{https://en.wikipedia.org/wiki/Simulated_annealing}{simulated annealing}, etc.) The one we use is called \href{https://en.wikipedia.org/wiki/Particle_swarm_optimization}{Particle Swarm Optimization (PSO)}. It simulates the behaviour of swarms of flying things. Consider vultures. Vultures fly high above the ground. With their good eyesight they can see what is going on below them, as well as keeping an eye on other vultures kilometers away, who might see other things. When one vulture sees something, it starts diving. If another vulture sees him diving, he will change course to fly in that direction, while keeping his eye on the ground as well. Another vulture even farther away sees the second vulture, and also changes course. Analogously, PSO uses such 'particles' in swarms to fly over the solution space (all possible savings plans/combinations). As one particle finds a good solution (a good savings plan), others will start flying in that direction, possibly finding a better solution on the way there. That will alter the course of the swarm again. After a number of times steps, the swarm will have converged on a very good solution (savings allocation combination).
+
+%It works like this. We start with 100 very good investment allocation plans (individuals), generated semi-randomly to form our initial population. We say semi-randomly, because we build these solutions according to common-sense plans humans would devise. The algorithm evaluates all the individuals according to our objective of maximising post-retirement income after tax. After evaluating the whole population of individuals, it keeps the best individuals (most profitable plans). Each individual has a "genetic code": the sequence describing the sizes of the contributions and withdrawals to each fund in each year. It mates the best individuals with each other by taking bits of the one's genetic code (investment plan) and bits of the other's genetic code (investment plan) to form a new hybrid plan. It evaluates these ``offspring'', and again keeps the best parents and offspring. Random individuals are also mutated semi-randomly (in a way that makes sense) to see if minor changes add any value. If they do, these mutations (slight plan tweaks) will persist and become part of the gene pool. By repeating this process for a few generations (20-100), the population gradually improves and produces exceptional individuals, which are kept in the hall of fame. At some stage the population plateaus, and no further improvements are made. At this point the algorithm has converged to a solution. The best individual in the hall of fame is then selected as the "winning solution".
 
 \newpage
 \section{The Tax Details}
