Added nudge for 10% expense reduction. Fixed previous bugs. PyFin seems to be working quite well, except that there seems to be a glitch with the pso.

--- a/PyFin White Paper/Pyfin White Paper.tex
+++ b/PyFin White Paper/Pyfin White Paper.tex
@@ -165,6 +165,8 @@
 
 \newthought{PyFin won't restructure your existing investments}. It will only allocate future investments considering what you already have. You can't restructure your RA anyway, but you could with your TFSA and DIs. The cheapest way generally is to just alter future contributions.
 
+\newthought{You have to have more than one \textit{kind} of investment vehicle} for PyFin to work. PyFin is about optimizing between investments. At present these are DIs, RAs, and TFSAs. If you don't have a DI, (which is only possible in PyFin if you have an RA and TFSA), PyFin allocates a DI to you, in order to have somewhere to put the RA lump sum withdrawal at retirement, if indeed it makes sense to withdraw that lump sum. PyFin may then allocate funds to this DI before retirement also, if it makes sense.
+
 \newthought{PyFin doesn't derisk your investments as you get older}. As you get closer to retirement, the theory states that you want to gradually move your investments to lower risk vehicles such as bonds and cash, and away from equity, so that you don't withdraw a disproportionate amount if you retire during a market crash. At present PyFin considers capital growth and taxes, not the inherent risk or volatility of equity vs cash vs bonds. This could be built in at a later stage. However, we are not sure if you really want all your money in low-risk vehicles on your retirement date anyway. Most people will live for another 20 years after retirement, and some more. Having three years' worth of bonds as a backup for when markets crash probably a good idea, so that you don't have to cash in your equity investments during that time. But putting all of your money in low-growth ``safe'' investments is probably sub-optimal. Furthermore, most RAs derisk automatically, so that by the time you retire, your RA portfolio is already mostly in cash and bonds anyway. What we would do to get around this current PyFin limitation is to include a bonds ETF debit order as part of our expenses for a few years before retirement. Once again, this is not investment advice; it just reflects the approach with which the calculator was written.
 
 \newthought{PyFin is powered by the PyFin library}, an open-source Python library created for this purpose and \href{https://gitlab.com/invokeanalytics/pyfin}{available on GitLab}. Because the software was written to help individuals save money and not cost them more money, it is licensed under the \href{https://opensource.org/licenses/GPL-3.0}{GNU Public License-3.0}. The GPL is the opposite of copyright\sidenote{called ``copyleft''}, and states that the source code, or any derivative work, must be free and must also carry the GPL license, and that the source code must be made available to the end user. This does not prevent commercial companies from using PyFin, but does make charging for the service, software, or derivative software, illegal\sidenote{This does not prevent Invoke Analytics from tailoring PyFin to a specific commercial client's needs. We would welcome such an opportunity.}. Amandla!
@@ -409,7 +411,7 @@ Capital Gains Tax is not applicable to lump sum payouts from RAs, pension funds,
 \end{table}
 
 \subsection{Discretionary Investments}
-By discretionary investments, we mean unit trusts and Electronically Traded Funds (ETFs). These attract CGT when withdrawn.
+By discretionary investments, we mean unit trusts and Electronically Traded Funds (ETFs). These attract CGT when withdrawn. If a user has not specified a DI, one is allocated to him or her. This is done so that the RA lump sum may be allocated somewhere when it pays it. It may be that the algorithm then finds that it is advantageous to open a DI account before retirement, and contribute to it. This will be done as a matter of course during the calculation.
 
 \subsection{Annual to Monthly Conversion}
 The contributions, withdrawals, capital growth, capital gains, etc. are stored on an annual basis, but the calculations assume that these are divided into twelve equal portions. To convert from annual to monthly interest, the following formula is used:
@@ -441,7 +443,9 @@ The formula above should yield capital gains in present-value terms, so that the
 
 \newpage
 \section{The Programming Details}
-The programming for PyFin is reasonably complex computationally. On a high level, the approach is to create classes for different savings vehicles: RA, TFSA, and DI. Each class has a Pandas dataframe object \texttt{df}, indexed by date annually (in tax years) from inception to the year of life expectancy. There are various routines with standardised names in each class.
+The programming for PyFin is reasonably complex computationally. An object-oriented approach is followed. There is an abstract base class called `TaxableEntity`, which contains all of the constants (for tax rules) for when it superclasses an investment vehicle class such as `RA`, `TFSA`, or `DI`. However, a person is also a taxable entity. Therefore `TaxableEntity` also superclasses the `person` class, and creates the dataframe with the necessary columns, as well as numerous useful variables such as retirement date, number of working years, etc. Since this dataframe is reasonably similar to the dataframes for each investment vehicle, the particulars of `person` also informs the creation of those objects.
+
+Each class has a Pandas dataframe object \texttt{df}, indexed by date annually (in tax years) from inception to the year of life expectancy. There are various routines with standardised names in each class.
 \newthought{calculate} is the central function for non-RA classes. This calculates the capital (and capital gains for DI), given a specific contribution and withdrawal regime as it appears in its dataframe.
 \newthought{calculateOptimalWithdrawal} calculates the optimal withdrawal rate so that capital runs out at life expectancy. If this is set to ``safe'' rather than the default ``optimal'', a 4\% withdrawal rate will be used.
 \newthought{\_calculateQuick} does calculations using numpy rather than Pandas, as this is much faster, which is necessary as this routine is called very often and slows down the optimisation process significantly.
